[package]
name = "witcher"
version = "0.1.8"
edition = "2018"
authors = ["phR0ze"]
license = "MIT OR Apache-2.0"
description = "Track and put down bugs using simple concise error handling"
readme = "README.md"
homepage = "https://github.com/phR0ze/witcher"
repository = "https://github.com/phR0ze/witcher"
exclude = [
  "docs",
	"examples",
  ".git",
  ".githooks",
  ".github",
	"tests",
	"benches",
	"target",
	".vscode"
]

# Higher the opt-level value the slower the compile time
[profile.release]
opt-level = 3   # Optimize for speed over size
lto = true      # Futher assist in optimization
debug = true    # keep symbols in release for debug

[profile.dev]
opt-level = 0   # Default no optimization

[dependencies]
gory = "0.1.*"
backtrace = "0.3.*"

# Examples and tests are built with these dependencies
[dev-dependencies]
